processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__fast__tests__all_ops__test_basic_block__stack_inputs_06_vec__Felt__from_u32_1__Felt__from_u32_2__Felt__from_u32_3__Felt___operations_65_vec__Operation__BCompress_.snap
---
source: processor/src/fast/tests/all_ops.rs
assertion_line: 134
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            1,
            2,
            3,
            4,
            5,
            0,
            0,
            0,
            15347555874597136405,
            8889982900942207130,
            9438166985164792313,
            10009440768243074631,
            0,
            0,
            0,
            0,
        ],
    },
)
