processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__fast__tests__all_ops__test_basic_block__stack_inputs_06_vec__Felt__from_u32_1__Felt__from_u32_2__Felt__from_u32_3__Felt___operations_65_vec__Operation__HPerm_.snap
---
source: processor/src/fast/tests/all_ops.rs
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            13363521242936483155,
            206696360459131660,
            10192065751917015241,
            8847072300198232031,
            15887831930496356326,
            14317595769594204925,
            10369947195256127299,
            2284563656427448679,
            2565139298116607198,
            15392631554294074198,
            16294234802149031576,
            8370500975236844806,
            0,
            0,
            0,
            0,
        ],
    },
)
